--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
     "ngx-bootstrap": "^3.1.4",
+    "ngx-ui-switch": "^8.0.0-beta.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
