--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,8 @@
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.min.js",
-              "./node_modules/bootstrap/dist/js/bootstrap.js"
+              "./node_modules/bootstrap/dist/js/bootstrap.js",
+              "./node_modules/deepstream.io-client-js/dist/deepstream.js"
             ]
           },
           "configurations": {
