--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "bootstrap": "^4.2.1",
     "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
+    "deepstream.io-client-js": "^2.3.0",
     "jquery": "^3.3.1",
     "ngx-bootstrap": "^3.1.4",
     "ngx-ui-switch": "^8.0.0-beta.0",
     "rxjs": "~6.3.3",
+    "uuid": "^3.3.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
